# backends

./: AGENTS.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Makefile.toml  README.md  RELEASES.md  clippy.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/actions/checkout-workspace/: action.yml
.github/workflows/: audit.yaml  ci.yaml  publish.yaml
crates/azure/: Cargo.toml
crates/azure-blob/: Cargo.toml  README.md
crates/azure-blob/src/: blobstore.rs  lib.rs
crates/azure-blob/tests/: live.rs
crates/azure-id/: Cargo.toml  README.md
crates/azure-id/src/: identity.rs  lib.rs
crates/azure-id/tests/: live.rs
crates/azure-table/: Cargo.toml  README.md
crates/azure-table/src/: lib.rs  sql.rs  store.rs
crates/azure-table/src/store/: document.rs  filter.rs  query.rs
crates/azure-table/tests/: live.rs
crates/azure-vault/: Cargo.toml  README.md
crates/azure-vault/src/: lib.rs
crates/azure-vault/tests/: live.rs
crates/azure/src/: identity.rs  key_vault.rs  lib.rs
crates/azure_id/: Cargo.toml  README.md
crates/azure_id/src/: identity.rs  lib.rs
crates/azure_table/: Cargo.toml  README.md
crates/azure_table/src/: lib.rs  sql.rs
crates/azure_table/src/sql/: exec.rs  query.rs
crates/azure_vault/: Cargo.toml  README.md
crates/azure_vault/src/: key_vault.rs  lib.rs
crates/cursor/: Cargo.toml  README.md
crates/cursor/src/: lib.rs  mcp.rs  mcp_json.rs  model.rs  test_support.rs
crates/cursor/tests/: live.rs
crates/cursor/tests/support/: local_path_tool_host.rs  mcp_server.rs  mod.rs  noop_tool_host.rs
crates/genai/: Cargo.toml  README.md
crates/genai/src/: lib.rs  model.rs
crates/genai/tests/: live.rs
crates/kafka/: Cargo.toml  README.md
crates/kafka/src/: lib.rs  messaging.rs  partitioner.rs  registry.rs
crates/kafka/tests/: live.rs
crates/mongodb/: Cargo.toml  README.md
crates/mongodb/src/: blobstore.rs  lib.rs
crates/mongodb/tests/: live.rs
crates/nats/: Cargo.toml  README.md
crates/nats/src/: blobstore.rs  keyvalue.rs  lib.rs  messaging.rs
crates/nats/tests/: live.rs
crates/opentelemetry/: Cargo.toml  README.md
crates/opentelemetry/src/: lib.rs  otel.rs
crates/opentelemetry/tests/: live.rs
crates/postgres/: Cargo.toml  README.md
crates/postgres/src/: lib.rs  sql.rs  types.rs
crates/postgres/tests/: live.rs
crates/redis/: Cargo.toml  README.md
crates/redis/src/: keyvalue.rs  lib.rs
crates/redis/tests/: live.rs
docs/: Architecture.md
examples/: Cargo.toml
examples/azure_blob/: README.md  main.rs
examples/azure_table/: README.md  main.rs
examples/cursor/: README.md  config.toml  guest.rs  guest_ask.rs  omnia.toml  runtime.rs
examples/cursor/wit/: world.wit
examples/cursor/workspace/.cursor/: mcp.json
supply-chain/: audits.toml  config.toml
