[workspace]
members = ["crates/*", "examples"]
resolver = "3"

[workspace.package]
authors = ["Augentic <https://augentic.io>"]
categories = ["wasm", "api-bindings"]
edition = "2024"
homepage = "https://augentic.io"
keywords = ["wasi", "wasm", "backend", "runtime", "omnia"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/augentic/backends"
rust-version = "1.93"
version = "0.24.0"

[workspace.lints.rust]
missing_docs = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
# https://doc.rust-lang.org/stable/clippy/index.html
all = "warn"      # correctness, suspicious, style, complexity, perf
cargo = "warn"
nursery = "warn"
pedantic = "warn"

# Cherry-picked lints are from the `restriction` lint group in order to drive up
# consistency, quality, and brevity
# See https://microsoft.github.io/rust-guidelines/guidelines/universal/index.html

# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

[workspace.dependencies]
anyhow = "1.0.102"
azure_core = "0.33.0"
azure_identity = "0.33.0"
azure_storage_blob = "0.10.1"
base64ct = { version = "1.8.3", features = ["std"] }
chrono = "0.4.44"
fromenv = "0.1.0"
futures = "0.3.32"
http = "1.4.0"
rustls = { version = "0.23.37", default-features = false, features = ["logging", "ring", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", default-features = false }
tracing = "0.1.44"
urlencoding = "2.1.3"

# omnia registry
omnia = "0.30.0"
omnia-wasi-blobstore = "0.30.0"
omnia-wasi-identity = "0.30.0"
omnia-wasi-jsondb = "0.30.0"
omnia-wasi-keyvalue = "0.30.0"
omnia-wasi-messaging = "0.30.0"
omnia-wasi-otel = "0.30.0"
omnia-wasi-sql = "0.30.0"
omnia-wasi-vault = "0.30.0"

[profile.release]
lto = true
opt-level = "s"
strip = true
