[workspace]
members = ["crates/*", "examples"]
resolver = "3"

[workspace.package]
authors = ["Augentic <https://augentic.io>"]
categories = ["wasm", "api-bindings"]
edition = "2024"
homepage = "https://augentic.io"
keywords = ["wasi", "wasm", "backend", "runtime", "omnia"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/augentic/backends"
rust-version = "1.95"
version = "0.28.0"

[workspace.lints.rust]
missing_docs = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
# https://doc.rust-lang.org/stable/clippy/index.html
all = "warn"      # correctness, suspicious, style, complexity, perf
cargo = "warn"
nursery = "warn"
pedantic = "warn"

# Cherry-picked lints are from the `restriction` lint group in order to drive up
# consistency, quality, and brevity
# See https://microsoft.github.io/rust-guidelines/guidelines/universal/index.html

# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

[workspace.dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", default-features = false, features = ["json"] }
azure_core = "1.0.0"
azure_identity = "1.0.0"
azure_storage_blob = "1.0.0"
base64ct = { version = "1.8.3", features = ["std"] }
chrono = "0.4.45"
fromenv = "0.1.0"
futures = "0.3.32"
http = "1.4.2"
rustls = { version = "0.23.41", default-features = false, features = ["logging", "ring", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", default-features = false }
tracing = "0.1.44"
urlencoding = "2.1.3"
wasip3 = { version = "0.7.0", features = ["http-compat"] }
wit-bindgen = { version = "0.58.0", features = ["async-spawn"] }

# omnia registry — Phase 2a: entire workspace on 0.35.0 via git patch until published.
omnia = "0.35.0"
omnia-wasi-blobstore = "0.35.0"
omnia-wasi-http = "0.35.0"
omnia-wasi-identity = "0.35.0"
omnia-wasi-docstore = "0.35.0"
omnia-wasi-keyvalue = "0.35.0"
omnia-wasi-messaging = "0.35.0"
omnia-wasi-model = "0.35.0"
omnia-wasi-otel = "0.35.0"
omnia-wasi-sql = "0.35.0"
omnia-wasi-vault = "0.35.0"

[patch.crates-io]
# omnia = { git = "https://github.com/augentic/omnia.git" }
# omnia-wasi-blobstore = { git = "https://github.com/augentic/omnia.git" }
# omnia-wasi-identity = { git = "https://github.com/augentic/omnia.git" }
# omnia-wasi-docstore = { git = "https://github.com/augentic/omnia.git" }
# omnia-wasi-keyvalue = { git = "https://github.com/augentic/omnia.git" }
# omnia-wasi-messaging = { git = "https://github.com/augentic/omnia.git" }
# omnia-wasi-model = { git = "https://github.com/augentic/omnia.git" }
# omnia-wasi-otel = { git = "https://github.com/augentic/omnia.git" }
# omnia-wasi-sql = { git = "https://github.com/augentic/omnia.git" }
# omnia-wasi-vault = { git = "https://github.com/augentic/omnia.git" }

omnia = { path = "../omnia/crates/omnia" }
omnia-wasi-blobstore = { path = "../omnia/crates/wasi-blobstore" }
omnia-wasi-http = { path = "../omnia/crates/wasi-http" }
omnia-wasi-identity = { path = "../omnia/crates/wasi-identity" }
omnia-wasi-docstore = { path = "../omnia/crates/wasi-docstore" }
omnia-wasi-keyvalue = { path = "../omnia/crates/wasi-keyvalue" }
omnia-wasi-messaging = { path = "../omnia/crates/wasi-messaging" }
omnia-wasi-model = { path = "../omnia/crates/wasi-model" }
omnia-wasi-otel = { path = "../omnia/crates/wasi-otel" }
omnia-wasi-sql = { path = "../omnia/crates/wasi-sql" }
omnia-wasi-vault = { path = "../omnia/crates/wasi-vault" }
omnia-wasi-websocket = { path = "../omnia/crates/wasi-websocket" }

[profile.release]
lto = true
opt-level = "s"
strip = true
