[package]
name = "examples"
publish = false
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[[example]]
name = "azure_blob"
path = "azure_blob/main.rs"

[[example]]
name = "azure_table"
path = "azure_table/main.rs"

# Cursor end-to-end: an `ask` guest that calls `complete`, served alongside the
# omnia `mcp` docs guest under one runtime that binds `WasiModel` to the cursor
# backend. See `cursor/README.md`.
[[example]]
name = "cursor-ask-wasm"
path = "cursor/guest_ask.rs"
crate-type = ["cdylib"]

[[example]]
name = "cursor"
path = "cursor/runtime.rs"

[dependencies]
serde_json.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
dotenvy = "0.15.7"
omnia.workspace = true
omnia-azure-blob = { path = "../crates/azure-blob" }
omnia-azure-table = { path = "../crates/azure-table" }
omnia-cursor = { path = "../crates/cursor" }
omnia-wasi-blobstore.workspace = true
omnia-wasi-http.workspace = true
omnia-wasi-jsondb.workspace = true
omnia-wasi-model.workspace = true
omnia-wasi-otel.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.23"

[target.'cfg(target_arch = "wasm32")'.dependencies]
axum = { workspace = true, features = ["macros"] }
omnia-wasi-http.workspace = true
wasip3.workspace = true
wit-bindgen.workspace = true
