[package]
name = "examples"
publish = false
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[[example]]
name = "azure_blob"
path = "azure_blob/main.rs"

[[example]]
name = "azure_table"
path = "azure_table/main.rs"

[dependencies]
serde_json.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
dotenvy = "0.15.7"
omnia.workspace = true
omnia-azure-blob = { path = "../crates/azure-blob" }
omnia-azure-table = { path = "../crates/azure-table" }
omnia-wasi-blobstore.workspace = true
omnia-wasi-http.workspace = true
omnia-wasi-jsondb.workspace = true
omnia-wasi-otel.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.23"

[target.'cfg(target_arch = "wasm32")'.dependencies]
axum = { workspace = true, features = ["macros"] }
wasip3.workspace = true
wit-bindgen.workspace = true
