[package]
name = "omnia-azure-blob"
description = "Azure Blob Storage backend provider"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow.workspace = true
azure_core.workspace = true
azure_identity.workspace = true
azure_storage_blob = "0.10.1"
chrono.workspace = true
fromenv.workspace = true
futures.workspace = true
omnia.workspace = true
omnia-wasi-blobstore.workspace = true
tracing.workspace = true
