[package]
name = "omnia-azure-id"
description = "Azure backend identity provider"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow.workspace = true
azure_core.workspace = true
azure_identity.workspace = true
fromenv.workspace = true
futures.workspace = true
omnia.workspace = true
omnia-wasi-identity.workspace = true
tracing.workspace = true
