[package]
name = "omnia-azure-table"
description = "Azure backend table storage provider implementing wasi-jsondb"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
fromenv.workspace = true
futures.workspace = true
hmac = "0.12.1"
omnia.workspace = true
omnia-wasi-jsondb.workspace = true
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde_json.workspace = true
sha2 = "0.10.9"
tracing.workspace = true
urlencoding.workspace = true
