[package]
name = "omnia-azure-vault"
description = "Azure backend secrets (vault) provider"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow.workspace = true
azure_core.workspace = true
azure_identity.workspace = true
azure_security_keyvault_secrets = "0.13.0"
base64ct.workspace = true
fromenv.workspace = true
futures.workspace = true
http.workspace = true
omnia.workspace = true
omnia-wasi-vault.workspace = true
tracing.workspace = true
