[package]
name = "warp-azure"
description = "Azure resource provider"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
azure_core = "0.31.0"
azure_identity = "0.31.0"
azure_security_keyvault_secrets = "0.10.0"
base64ct = { version = "1.8.0", features = ["std"] }
fromenv.workspace = true
futures.workspace = true
http.workspace = true
qwasr.workspace = true
qwasr-wasi-identity.workspace = true
qwasr-wasi-vault.workspace = true
tracing.workspace = true
