[package]
name = "qwasr-azure-table"
description = "Azure backend table storage provider (not a full featured SQL database)"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
fromenv.workspace = true
futures.workspace = true
hmac = "0.12.1"
qwasr.workspace = true
qwasr-wasi-sql.workspace = true
reqwest = { version = "0.13.1", features = ["json", "rustls", "stream"] }
sha2 = "0.10.9"
tracing.workspace = true
urlencoding.workspace = true
