[package]
name = "omnia-genai"
description = "Multi-provider generative-AI model backend (the augentic:model boundary)"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow.workspace = true
fromenv.workspace = true
futures.workspace = true
genai = "=0.6.0-beta.5"
# Pinned to the local omnia 0.35.0 line via the workspace `[patch.crates-io]`
# override (the host→guest `resolve` API is unreleased on crates.io).
omnia = "0.35.0"
omnia-wasi-model.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Integration tests are separate crates and do not inherit the library's normal
# dependencies, so the ones the live run-2 test (`tests/live.rs`) drives are
# repeated here.
[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
