[package]
name = "warp-kafka"
description = "Kafka messaging resource"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
fromenv.workspace = true
futures.workspace = true
http.workspace = true
jsonschema = "0.38.1"
kernel.workspace = true
rand = "0.9.2"
rdkafka = { version = "0.38", features = ["cmake-build", "ssl-vendored", "tokio"] }
schema-registry-client = "0.4.1"
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
wasi-messaging.workspace = true

[dev-dependencies]
csv = "1.4.0"
serde.workspace = true
