[package]
name = "omnia-kafka"
description = "Kafka messaging resource"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
fromenv.workspace = true
futures.workspace = true
http.workspace = true
jsonschema = { version = "0.46.2", default-features = false }
omnia.workspace = true
omnia-wasi-messaging.workspace = true
rand = "0.10.0"
rdkafka = { version = "0.39.0", features = ["cmake-build", "curl", "ssl-vendored", "tokio"] }
schema-registry-client = "0.4.2"
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
csv = "1.4.0"
serde.workspace = true
