[package]
name = "warp-mongodb"
description = "MongoDB resource provider"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
fromenv.workspace = true
futures.workspace = true
mongodb = "3.5.0"
qwasr.workspace = true
qwasr-wasi-blobstore.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
