[package]
name = "backend-nats"
description = "NATS provider for messaging, keyvalue, and blobstore"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-nats = "0.45.0"
chrono.workspace = true
fromenv.workspace = true
futures.workspace = true
kernel.workspace = true
nkeys = "0.4.5"
tokio.workspace = true
tracing.workspace = true
wasi-blobstore.workspace = true
wasi-keyvalue.workspace = true
wasi-messaging.workspace = true
