[package]
name = "warp-nats"
description = "NATS provider for messaging, keyvalue, and blobstore"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-nats = "0.45.0"
chrono.workspace = true
fromenv.workspace = true
futures.workspace = true
nkeys = "0.4.5"
qwasr.workspace = true
qwasr-wasi-blobstore.workspace = true
qwasr-wasi-keyvalue.workspace = true
qwasr-wasi-messaging.workspace = true
tokio.workspace = true
tracing.workspace = true
