[package]
name = "omnia-opentelemetry"
description = "OpenTelemetry gRPC resource provider"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow.workspace = true
fromenv.workspace = true
futures.workspace = true
omnia.workspace = true
omnia-wasi-otel.workspace = true
opentelemetry-proto = { version = "0.31.0", features = ["gen-tonic"] }
tonic = "0.14.5"
tracing.workspace = true
