[package]
name = "qwasr-postgres"
description = "Postgres resource provider"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
deadpool-postgres = { version = "0.14", default-features = false, features = ["rt_tokio_1"] }
fromenv.workspace = true
futures.workspace = true
qwasr.workspace = true
qwasr-wasi-sql.workspace = true
rustls.workspace = true
serde_json.workspace = true
tokio-postgres = { version = "0.7.16", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres-rustls = { version = "0.13.0", default-features = false }
tracing.workspace = true
webpki-roots = { version = "1.0.5", default-features = false }
