[package]
name = "qwasr-redis"
description = "Redis resource provider"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
fromenv.workspace = true
futures.workspace = true
qwasr.workspace = true
qwasr-wasi-keyvalue.workspace = true
redis = { version = "1.0.1", features = ["connection-manager", "tokio-rustls-comp"] }
tracing.workspace = true
