[package]
name = "omnia-redis"
description = "Redis resource provider"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow.workspace = true
fromenv.workspace = true
futures.workspace = true
omnia.workspace = true
omnia-wasi-keyvalue.workspace = true
redis = { version = "1.4.0", features = ["connection-manager", "tokio-rustls-comp"] }
tracing.workspace = true

# The live test (`tests/live.rs`) is a separate crate; it needs tokio's test
# runtime, which the library dependency does not enable.
[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
